# intrusive_shared_ptr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  article.html  meson.build  refcnt_ptr.h
.docbuild/: apple_cf_ptr.rst  com_ptr.rst  conf.py  index.rst  intrusive_shared_ptr.rst  python_ptr.rst  ref_counted.rst  refcnt_ptr.rst
.docbuild/_static/: custom.css
.github/workflows/: cmake.yml  make-docs.yml  publish.yml  test.yml
.tools/: build-docs  make-module  module-template.txt
cmake/: install.cmake  isptr-config.cmake.in  isptr.pc.in
doc/: intrusive_shared_ptr.md  ref_counted.md  refcnt_ptr.md  reference_counting.md  trivial_abi.md
inc/intrusive_shared_ptr/: apple_cf_ptr.h  com_ptr.h  common.h  intrusive_shared_ptr.h  python_ptr.h  ref_counted.h  refcnt_ptr.h
modules/: isptr.cppm
test/: CMakeLists.txt  mocks.h  test_abstract_ref_counted.cpp  test_abstract_ref_counted_st.cpp  test_apple_cf_ptr.cpp  test_atomic.cpp  test_com_ptr.cpp  test_delegating_traits.cpp  test_general.cpp  test_main.cpp  test_out_ptr.cpp  test_python_ptr.cpp  test_ref_counted.cpp  test_ref_counted_st.cpp  test_weak_ref_counted.cpp  test_weak_ref_counted_st.cpp
tools/: create-release  make-module  module-template.txt
